--- a/panel.html
+++ b/panel.html
@@ -170,7 +170,7 @@ body.light-theme .logo-img {
 
 <div class="list-container">
   <ul class="article-list">
-    <li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+    <li class="article-item" onclick="openArticle('patholytica.com/library')">
       <h2 class="article-title">Understanding Cardiovascular Pathology: A Comprehensive Review</h2>
       <div class="article-meta">
         <span>Dr. Sarah Mitchell</span>
@@ -181,8 +181,7 @@ body.light-theme .logo-img {
       </div>
     </li>
 
-```
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Advances in Neurological Imaging Techniques</h2>
   <div class="article-meta">
     <span>Dr. James Chen</span>
@@ -193,7 +192,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Molecular Mechanisms of Cancer Progression</h2>
   <div class="article-meta">
     <span>Dr. Emily Rodriguez</span>
@@ -204,7 +203,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Clinical Applications of Immunotherapy in Modern Medicine</h2>
   <div class="article-meta">
     <span>Dr. Robert Kim</span>
@@ -215,7 +214,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Genetic Markers in Personalized Medicine Approaches</h2>
   <div class="article-meta">
     <span>Dr. Lisa Zhang</span>
@@ -226,7 +225,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Hypertensive Heart Disease: Current Treatment Protocols</h2>
   <div class="article-meta">
     <span>Dr. Robert Kim</span>
@@ -237,7 +236,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Atherosclerosis and Inflammatory Biomarkers</h2>
   <div class="article-meta">
     <span>Dr. Lisa Zhang</span>
@@ -248,7 +247,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Cardiac Imaging Advances in Diagnostic Accuracy</h2>
   <div class="article-meta">
     <span>Dr. Michael Johnson</span>
@@ -259,7 +258,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Systematic Review of Diabetes Management Strategies</h2>
   <div class="article-meta">
     <span>Dr. Michael Johnson</span>
@@ -270,7 +269,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Meta-Analysis of Anticoagulation Therapies</h2>
   <div class="article-meta">
     <span>Dr. Anna Williams</span>
@@ -281,7 +280,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Clinical Outcomes in Surgical Interventions</h2>
   <div class="article-meta">
     <span>Dr. David Park</span>
@@ -292,7 +291,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Evidence-Based Approaches to Pain Management</h2>
   <div class="article-meta">
     <span>Dr. Rachel Green</span>
@@ -303,7 +302,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Breakthrough in Gene Therapy Applications</h2>
   <div class="article-meta">
     <span>Dr. Thomas Anderson</span>
@@ -314,7 +313,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">Immunotherapy Advances in Oncology</h2>
   <div class="article-meta">
     <span>Dr. Rachel Green</span>
@@ -325,7 +324,7 @@ body.light-theme .logo-img {
   </div>
 </li>
 
-<li class="article-item" onclick="openArticle('patholytica.com/libraries')">
+<li class="article-item" onclick="openArticle('patholytica.com/library')">
   <h2 class="article-title">The Role of Microbiome in Human Health</h2>
   <div class="article-meta">
     <span>Dr. Jennifer Lee</span>
@@ -335,7 +334,6 @@ body.light-theme .logo-img {
     <span>9 min read</span>
   </div>
 </li>
-```
 
   </ul>
 </div>
