--- a/user.html
+++ b/user.html
@@ -205,11 +205,16 @@ async function loadArticles() {
   const articleList = document.getElementById('articleList');
   
   try {
-    // First, try without the JOIN to see if Articles table is accessible
+    // Query with JOIN to get username from users table
     const { data, error } = await supabase
-      .from('Articles')
-      .select('*')
-      .order('CreatedAt', { ascending: false });
+      .from('articles')
+      .select(`
+        *,
+        users (
+          username
+        )
+      `)
+      .order('createdat', { ascending: false });
 
     console.log('Supabase response:', { data, error });
 
@@ -221,7 +226,7 @@ async function loadArticles() {
     allArticles = data;
 
     if (!data || data.length === 0) {
-      articleList.innerHTML = '<li class="no-articles">No articles found. Start by adding some to your database!</li>';
+      articleList.innerHTML = '<li class="no-articles">No articles found. Add articles to your database using the Table Editor!</li>';
       return;
     }
 
@@ -231,11 +236,11 @@ async function loadArticles() {
     articleList.innerHTML = `<li class="error-message">
       <i class="fas fa-exclamation-triangle" style="font-size: 32px; margin-bottom: 16px;"></i>
       <p>Error loading articles: ${error.message}</p>
-      <p style="font-size: 12px; margin-top: 8px;">Check console for details. Common issues:</p>
+      <p style="font-size: 12px; margin-top: 8px;">Common fixes:</p>
       <ul style="text-align: left; display: inline-block; margin-top: 8px;">
-        <li>RLS (Row Level Security) is enabled - add a policy to allow SELECT</li>
-        <li>Table name might be case-sensitive (try "articles" instead of "Articles")</li>
-        <li>Network/CORS issues</li>
+        <li>Enable RLS policies (see instructions)</li>
+        <li>Make sure articles table has data</li>
+        <li>Check browser console for details</li>
       </ul>
     </li>`;
   }
@@ -250,13 +255,13 @@ function renderArticles(articles) {
   }
 
   articleList.innerHTML = articles.map(article => {
-    const authorName = 'Author'; // Will fetch separately once basic query works
-    const date = formatDate(article.CreatedAt || article.createdat);
-    const readTime = calculateReadTime(article.Title || article.title);
+    const authorName = article.users?.username || 'Unknown Author';
+    const date = formatDate(article.createdat);
+    const readTime = calculateReadTime(article.title);
     
     return `
-      <li class="article-item" onclick="openArticle(${article.ArticleID || article.articleid})">
-        <h2 class="article-title">${escapeHtml(article.Title || article.title)}</h2>
+      <li class="article-item" onclick="openArticle(${article.articleid})">
+        <h2 class="article-title">${escapeHtml(article.title)}</h2>
         <div class="article-meta">
           <span>${escapeHtml(authorName)}</span>
           <div class="meta-dot"></div>
@@ -264,9 +269,9 @@ function renderArticles(articles) {
           <div class="meta-dot"></div>
           <span>${readTime} min read</span>
           <div class="meta-dot"></div>
-          <span><i class="fas fa-heart"></i> ${article.LikesCount || article.likescount || 0}</span>
+          <span><i class="fas fa-heart"></i> ${article.likescount || 0}</span>
           <div class="meta-dot"></div>
-          <span><i class="fas fa-eye"></i> ${article.ViewsCount || article.viewscount || 0}</span>
+          <span><i class="fas fa-eye"></i> ${article.viewscount || 0}</span>
         </div>
       </li>
     `;
@@ -300,8 +305,7 @@ function searchArticles() {
   const searchQuery = prompt('Search articles:');
   if (searchQuery && searchQuery.trim()) {
     const filtered = allArticles.filter(article => 
-      article.Title.toLowerCase().includes(searchQuery.toLowerCase()) ||
-      (article.Users?.FullName || '').toLowerCase().includes(searchQuery.toLowerCase())
+      article.title.toLowerCase().includes(searchQuery.toLowerCase())
     );
     renderArticles(filtered);
   } else if (searchQuery === '') {
